feat: Fixed assoc table not updating. added new migrations
