# apps/backend/src/models/client.py
@@ -9,7 +9,7 @@ class Client(db.Model):
     # Columns
     id = db.Column(db.Integer, primary_key=True)
     name = db.Column(db.String(100), nullable=False)
-    
+
     description = db.Column(db.Text, nullable=True)
     features = db.Column(db.ARRAY(db.String), nullable=True)
     location = db.Column(db.String(255), nullable=True)
@@ -19,9 +19,7 @@ class Client(db.Model):
     end_date = db.Column(db.DateTime, nullable=True)
 
     # Relationships
-    projects = db.relationship(
-        "Project", back_populates="client", lazy="dynamic"
-    )
+    projects = db.relationship("Project", back_populates="client", lazy="select")
 
     # Timestamps
     created_at = db.Column(db.DateTime, default=datetime.now(UTC))
